# drychem

./: .clang-format  .gitignore  .travis.yml  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  _b_u_i_l_d_8md.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _p_r_i_m_e_r_8md.html  _p_u_l_l___r_e_q_u_e_s_t___t_e_m_p_l_a_t_e_8md.html  _q_u_i_c_k___l_i_n_k_s_8md.html  _r_e_a_d_m_e_8md.html  _target_directories_8txt.html  annotated.html  annotated_dup.js  autotoc_md0.html  autotoc_md22.html  autotoc_md31.html  autotoc_md42.html  autotoc_md47.html  autotoc_md51.html  autotoc_md54.html  autotoc_md61.html  autotoc_md75.html  autotoc_md76.html  autotoc_md84.html  autotoc_md9.html  backwards_difference_method_8hpp.html  backwards_difference_method_8hpp_source.html  centered_difference_method_8hpp.html  (+399 more)
ci/: getVersions.sh  (+4 more)
common-utilities/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
common-utilities/include/common-utils/: drychem.hpp  errors.hpp  files.hpp  math.hpp  meta.hpp  networking.hpp  strings.hpp  utilities.hpp
common-utilities/libs/errors/docs/: errors.md
common-utilities/libs/errors/samples/: fibonacciExample.cpp
common-utilities/libs/errors/tests/: testAllErrorFunctions.cpp
common-utilities/libs/files/docs/: files.md
common-utilities/libs/files/samples/: markupParsingExample.cpp
common-utilities/libs/files/tests/: testAllFileFunctions.cpp
common-utilities/libs/math/docs/: math.md
common-utilities/libs/math/samples/: finiteDifferencesExample.cpp  validate.py
common-utilities/libs/math/tests/: testAllMathFunctions.cpp
common-utilities/libs/meta/docs/: meta.md
common-utilities/scripts/: changeCase.sh  compiler.sh  errorHandling.sh  fileMaker.sh  linkLogin.sh  modifyFiles.sh  remover.sh  showArgs.sh  showOpts.sh
common-utilities/scripts/utilities/: errorHandling.sh  showOpts.sh  typeParsing.sh
cpp-units/: CMakeLists.txt  README.md
cpp-units/include/cpp-units/: physicalQuantities.hpp
cpp-units/tests/: testAllMathFunctions.cpp  testAllPhysicalQuantityFunctions.cpp
cpp-units/tests/testMathFunctions/: testAdvancedMathFunctions.hpp  testBasicMathFunctions.hpp
cpp-units/tests/testOperators/: testArithmeticOperators.hpp  testComparisonOperators.hpp  testStreamOperators.hpp
cpp-units/tests/testTypes/: testDimensionality.hpp  testPhysicalQuantity.hpp
test/: CMakeLists.txt
test/TestContainers/: testContainerFunctions.cpp
test/TestConversions/: testAllConversionFunctions.cpp  testAssertions.hpp
test/TestConversions/AmountOfSubstance/: testAmountOfSubstanceConversionFunctions.cpp  testAmountOfSubstanceConversionFunctions.hpp
test/TestConversions/Angle/: testAngleConversionFunctions.cpp  testAngleConversionFunctions.hpp
test/TestConversions/Area/: testAreaConversionFunctions.cpp  testAreaConversionFunctions.hpp
test/TestConversions/ElectricCharge/: testElectricChargeConversionFunctions.cpp  testElectricChargeConversionFunctions.hpp
test/TestConversions/Energy/: testEnergyConversionFunctions.cpp  testEnergyConversionFunctions.hpp
test/TestConversions/Length/: testLengthConversionFunctions.cpp  testLengthConversionFunctions.hpp
test/TestConversions/MagneticFluxDensity/: testMagneticFluxDensityConversionFunctions.cpp  testMagneticFluxDensityConversionFunctions.hpp
test/TestConversions/Mass/: testMassConversionFunctions.cpp  testMassConversionFunctions.hpp
test/TestConversions/MolarEnergy/: testMolarEnergyConversionFunctions.cpp  testMolarEnergyConversionFunctions.hpp
test/TestConversions/Pressure/: testPressureConversionFunctions.cpp  testPressureConversionFunctions.hpp
test/TestConversions/SI_UnitPrefixes/: testSI_UnitPrefixesConversionFunctions.cpp  testSI_UnitPrefixesConversionFunctions.hpp
test/TestConversions/Temperature/: testTemperatureConversionFunctions.cpp  testTemperatureConversionFunctions.hpp
test/TestConversions/Time/: testTimeConversionFunctions.cpp  testTimeConversionFunctions.hpp
test/TestConversions/Volume/: testVolumeConversionFunctions.cpp  testVolumeConversionFunctions.hpp
test/TestErrors/: testAllErrorFunctions.cpp  testErrorFunctions.cpp
test/TestErrors/TestExceptions/: testCommonExceptionTypes.hpp  testExceptionHandling.hpp
test/TestErrors/TestTraits/: testErrorTraits.hpp
test/TestErrors/TestUtilities/: testErrorHandling.hpp  testErrorTraits.hpp  testErrorTypes.hpp
test/TestFiles/: test.inp  test.txt  testFileFunctions.cpp
test/TestMath/: testMathFunctions.cpp
test/TestMath/TestContainers/: testContainerFunctions.hpp
test/TestMathematics/: testMathematicalFunctions.cpp
test/TestPhysicalQuantities/: testAssertions.hpp  testMiscellaneousUnitFunctions.cpp
test/TestPhysicalQuantities/AmountOfSubstance/: testAmountOfSubstanceConversionFunctions.cpp
test/TestPhysicalQuantities/Angle/: testAngleConversionFunctions.cpp
test/TestPhysicalQuantities/Area/: testAreaConversionFunctions.cpp
test/TestPhysicalQuantities/ElectricCharge/: testElectricChargeConversionFunctions.cpp
test/TestPhysicalQuantities/Energy/: testEnergyConversionFunctions.cpp
test/TestPhysicalQuantities/Length/: testLengthConversionFunctions.cpp
test/TestPhysicalQuantities/MagneticFluxDensity/: testMagneticFluxDensityConversionFunctions.cpp
test/TestPhysicalQuantities/Mass/: testMassConversionFunctions.cpp
test/TestPhysicalQuantities/MiscellaneousUnitFunctions/: testMiscellaneousUnitFunctions.cpp
test/TestPhysicalQuantities/MolarEnergy/: testMolarEnergyConversionFunctions.cpp
test/TestPhysicalQuantities/Pressure/: testPressureConversionFunctions.cpp
test/TestPhysicalQuantities/SI_UnitPrefixes/: testSI_UnitConversionFunctions.cpp
test/TestPhysicalQuantities/Temperature/: testTemperatureConversionFunctions.cpp
test/TestPhysicalQuantities/Time/: testTimeConversionFunctions.cpp
test/TestPhysicalQuantities/Volume/: testVolumeConversionFunctions.cpp
test/TestStrings/: testStringFunctions.cpp
(+1471 files in other folders)
